--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="row">
                   <div class="col-md-3">
-                    <img src="assets/images/Jaspreetkaur.jpg" alt="Profile Pic" style="width: 100%; height: 100%;">
+                    <img src="assets/images/Profile.JPG" alt="Profile Pic" style="width: 100%; height: 100%;">
                   </div>
                   <div class="col-md-9" style="text-align: justify">
                     <p>
@@ -90,15 +90,6 @@
                 </div>
 
               </div>
-              <!-- <footer>
-                <div class="footer">
-                  &copy; Copyright2018 Jaspreet Kaur
-                </div>
-              </footer> -->
-
-              <!-- <footer class="page-footer font-small stylish-color-dark pt-4 mt-4">
-                  &copy; Copyright2018 Jaspreet Kaur
-              </footer> -->
             
             <div class="footer">
               <div >
