Add image and link in portfolio to the hangman game project

--- a/portfolio.html
+++ b/portfolio.html
@@ -110,6 +110,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-4">
+                        <div class="contain">
+                            <img src="assets/images/hangman-game.png" alt="tech7" class="img-responsive"/>
+                            <div class="text-block">
+                                <a href="https://jaspreetkaur27.github.io/Word-Guess-Game/" target="_blank">Hangman Game</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 
 
