add image and link to the trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,9 +57,9 @@
                     </div>
                     <div class="col-md-4">
                         <div class="contain">
-                            <img src="assets/images/tech2.jpg" alt="tech2" class="img-responsive"/>
+                            <img src="assets/images/Trivia-Game.png" alt="trivia-Game"" class="img-responsive"/>
                             <div class="text-block">
-                                <a href="https://www.itic.org/" target="_blank">ITIC</a>
+                                <a href="https://jaspreetkaur27.github.io/Trivia-Game/" target="_blank">Trivia Game</a>
                             </div>
                         </div>
                     </div>
