update portfolio by adding all projects on the pages with link to functional website of projects

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <li>Web Technologies</li>
                         <li>Java</li>
                         <li>Android</li>
-                        <li>Databse</li>
+                        <li>Database</li>
                         <li>Asp.Net</li>
                         <li>C#</li>
                       </ul>
