--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <title>Contact</title>
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" id="ownnav">
+        <nav class="navbar navbar-expand-lg" id="ownnav">
                 <div class="container">
                   <div class="name">
                 <a class="navbar-brand" href="index.html">
