change skills in progress bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <title>My Bootstrap Portfolio</title>
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" id="ownnav">
+        <nav class="navbar navbar-expand-lg" id="ownnav">
                 <div class="container">
                   <div class="name">
                 <a class="navbar-brand" href="index.html">
@@ -71,21 +71,82 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-12">
-                    <br>
+                    <div class="col-md-12">
+                        <h4><b>Skills</b></h4>
+                    </div>
                   </div>
-                </div>
                 <div class="row">
-                    <div class="col-md-3">
-                      <h4><b>Skills</b></h4>
-                      <ul>
-                        <li>Web Technologies</li>
-                        <li>Java</li>
-                        <li>Android</li>
-                        <li>Database</li>
-                        <li>Asp.Net</li>
-                        <li>C#</li>
-                      </ul>
+                    <div class="col-md-4">
+                      <div class="language-name">
+                        <h5>JavaScript</h5>
+                      <div class="progress">
+                        <div class="progress-bar bg-info" role="progressbar" style="width: 80%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">80%</div>
+                      </div>
+                    </div>
+                    <div class="language-name">
+                        <h5>NodeJS</h5>
+                      <div class="progress">
+                        <div class="progress-bar bg-info" role="progressbar" style="width: 75%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">75%</div>
+                      </div>
+                    </div>
+                    <div class="language-name">
+                        <h5>ReactJS</h5>
+                      <div class="progress">
+                        <div class="progress-bar bg-info" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">70%</div>
+                      </div>
+                    </div>
+                    <div class="language-name">
+                        <h5>ExpressJS</h5>
+                      <div class="progress">
+                        <div class="progress-bar bg-info" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">70%</div>
+                      </div>
+                    </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="language-name">
+                            <h5>HTML5</h5>
+                          <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">90%</div>
+                          </div>
+                        </div>
+                        <div class="language-name">
+                            <h5>CSS3</h5>
+                          <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 85%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">85%</div>
+                          </div>
+                        </div>
+                        <div class="language-name">
+                            <h5>MySQL</h5>
+                          <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 80%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">80%</div>
+                          </div>
+                        </div>
+                        <div class="language-name">
+                            <h5>MongoDB</h5>
+                          <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">70%</div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="language-name">
+                            <h5>Firebase</h5>
+                          <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">70%</div>
+                          </div>
+                        </div>
+                        <div class="language-name">
+                            <h5>Git</h5>
+                          <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">90%</div>
+                          </div>
+                        </div>
+                        <div class="language-name">
+                            <h5>Java</h5>
+                          <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 70%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">70%</div>
+                          </div>
+                        </div>
                     </div>
                 </div>
 
